; ModuleID = '/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_fontdef_jp.c_MS_PMincho_Init.c'
source_filename = "/home/carl/AnghaBench/poco/PDF/src/extr_hpdf_fontdef_jp.c_MS_PMincho_Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i32, i32, i32, i64, i64, i32 }

@.str = private unnamed_addr constant [31 x i8] c" HPDF_FontDef_MS_PMincho_Init\0A\00", align 1
@HPDF_FONT_SYMBOLIC = common dso_local global i64 0, align 8
@HPDF_FONT_SERIF = common dso_local global i64 0, align 8
@MS_PGothic_W_ARRAY = common dso_local global i32 0, align 4
@HPDF_OK = common dso_local global i32 0, align 4
@HPDF_FONTDEF_TYPE_CID = common dso_local global i32 0, align 4
@HPDF_TRUE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*)* @MS_PMincho_Init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @MS_PMincho_Init(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %5 = call i32 @HPDF_PTRACE(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 0
  store i32 859, i32* %7, align 8
  %8 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 1
  store i32 -140, i32* %9, align 4
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 2
  store i32 679, i32* %11, align 8
  %12 = call i32 @HPDF_ToBox(i32 -82, i32 -136, i32 996, i32 859)
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 8
  store i32 %12, i32* %14, align 8
  %15 = load i64, i64* @HPDF_FONT_SYMBOLIC, align 8
  %16 = load i64, i64* @HPDF_FONT_SERIF, align 8
  %17 = add nsw i64 %15, %16
  %18 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %18, i32 0, i32 7
  store i64 %17, i64* %19, align 8
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 6
  store i64 0, i64* %21, align 8
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 3
  store i32 78, i32* %23, align 4
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %25 = load i32, i32* @MS_PGothic_W_ARRAY, align 4
  %26 = call i32 @HPDF_CIDFontDef_AddWidth(%struct.TYPE_4__* %24, i32 %25)
  store i32 %26, i32* %4, align 4
  %27 = load i32, i32* @HPDF_OK, align 4
  %28 = icmp ne i32 %26, %27
  br i1 %28, label %29, label %31

29:                                               ; preds = %1
  %30 = load i32, i32* %4, align 4
  store i32 %30, i32* %2, align 4
  br label %39

31:                                               ; preds = %1
  %32 = load i32, i32* @HPDF_FONTDEF_TYPE_CID, align 4
  %33 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %34 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %33, i32 0, i32 5
  store i32 %32, i32* %34, align 4
  %35 = load i32, i32* @HPDF_TRUE, align 4
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 4
  store i32 %35, i32* %37, align 8
  %38 = load i32, i32* @HPDF_OK, align 4
  store i32 %38, i32* %2, align 4
  br label %39

39:                                               ; preds = %31, %29
  %40 = load i32, i32* %2, align 4
  ret i32 %40
}

declare dso_local i32 @HPDF_PTRACE(i8*) #1

declare dso_local i32 @HPDF_ToBox(i32, i32, i32, i32) #1

declare dso_local i32 @HPDF_CIDFontDef_AddWidth(%struct.TYPE_4__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
